fix image contrast

--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@ body {
     font-family: 'Archivo', sans-serif;
 }
 header {
+    font-size: 22px;
     font-weight: 600;
-    font-size: 18px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -72,17 +72,17 @@ li + li {
 }
 .action a {
     display:flex;
-    width: 50px;
+    width: 60px;
     padding: 12px 18px;
     border-radius: 12px;
     background-color: #ffffff;
     color:hsl(209, 100%, 38%);
-    font-weight: 700;
+    font-weight: 600;
     justify-content: center;
 }
 @media only screen and (max-width: 750px) {
     .action a {
-        padding: 8px 12px;
+        padding: 10px 16px;
     }
 }
 a {
@@ -94,7 +94,7 @@ a:hover {
 }
 .image-mask {
     position: absolute;
-    background-color: rgba(255, 50, 90, 0.2);
+    background-color: hsla(349, 20%, 10%, 0.5);
     top:0;
     right:0;
     bottom:0;
@@ -105,6 +105,7 @@ a:hover {
 .hero {
     display: flex;
     position: relative;
+    border-bottom: 8px solid #ffffff;
 }  
 .heroimage {
     width: 100%;
@@ -125,7 +126,7 @@ a:hover {
     }
 }
 h1 {
-    font-weight: 700;
+    font-weight: 600;
     font-size: 50px;
     color: #ffffff;
 }
@@ -144,11 +145,13 @@ h1 {
     border-radius: 12px;
     font-size: 24px;
     border: 4px solid #ffffff;
+    box-shadow: 6px 4px 4px black;
 }
 @media only screen and (max-width: 750px) {
     .hero a {
         margin-top: 12px;
         font-size: 16px;
+        padding: 12px 16px;
    }
 }
 main {
@@ -158,11 +161,10 @@ main {
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 25%;
+    column-gap: 15%;
     row-gap: 50px;
     padding:48px 48px;
     font-weight: 500;
-    font-size: 18px;
 }
 @media only screen and (max-width: 750px) {
     .grid-container {
@@ -172,8 +174,8 @@ main {
 }
 
 h2 {
-    font-size: 28px;
-    font-weight: 700;
+    font-size: 30px;
+    font-weight: 600;
     margin-top:1em;
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
@@ -182,6 +184,10 @@ h2 {
     h2 {
         font-size: 22px;
    }
+}
+
+.feature {
+    font-size: 24px;
 }
 .feature-1 {
     grid-column: 1 / span 1;
@@ -229,10 +235,11 @@ h2 {
 
 .feature {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 24px;
 }
 .grid-container  p {
     margin-bottom: 1em;
+    font-size: 22px;
 }
 .grid-container  a {
     align-items: center;
@@ -242,5 +249,6 @@ h2 {
     color: hsl(209, 100%, 38%);
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 18px;
+    box-shadow: 8px 4px 4px black;
 }
